# cps-childcare

./: .gitattributes  .gitignore  README.md  alembic.ini  index.html  pyproject.toml
alembic/: env.py
alembic/versions/: 04eb6151bdd1_change_model_name_to_openai_model_name.py  0fc9bb7d322a_more_validation_changes.py  21ba01dad18c_removed_redundant_is_before_or_after_.py  797c636fb2b4_get_rid_of_sqlite_vectors.py  8ea2d3372010_adding_additional_data_models_for_the_.py  97b4687bc90e_init.py  a0298a3ad45b_changes_to_email_list_validation.py  ad95670cf1f3_added_model_name_to_crawleropenairecord.py  b2d51e1e82f4_add_schooltoneighborhood_and_.py  b7e1394dd00e_modifying_the_openai_childcare_.py  c275995b7eb5_add_school_type.py  c992adf61e4f_removed_page_url_from_.py  e0a42e08fd1a_init.py  e72717a27bfc_removed_redundant_is_before_or_after_.py  ea2103e0b3b4_init.py  f9ffe487856b_simplify_combined_field_validator.py
cps_childcare/: cps_data_models.py  cps_firecrawl.py  cps_firecrawl_models.py  cps_openai.py  cps_openai_aggregate.py  cps_scraper.py  database.py  utils.py
css/: styles.css
data/: cps_crawler.db  cps_schools_contacts.csv  final_childcare_dataset.csv
data/embeddings.lancedb/webpagechunk.lance/_transactions/: 0-187ef35a-b868-4b94-9471-4e56f1d1a0a2.txn  1-0ed05ffe-31d8-47fb-b22a-809bd828b898.txn  2-baf74772-fc9e-4e6a-b601-6448c8898dcc.txn  3-f47775a2-e925-4238-a0ed-5243a3cf4bb9.txn
data/embeddings.lancedb/webpagechunk.lance/data/: d66dbc9c-6ee0-43fe-b2c6-213521924980.lance
js/: script.js
scripts/: 01_cps_scraper.py  02_cps_firecrawl.py  03_cps_openai.py  04_cps_openai_aggregate.py  05_update_childcare_airtable.py  06_append_neighborhood_to_airtable.py  07_update_school_demos_airtable.py  08_write_final_csv.py  09_chunk_and_embed.py
